# CordicSim

./: CMakeLists.txt  cordic-sim.cpp  cordic.hpp  main.cpp
